--- a/src/app/workout/workout-el/workout-el.component.html
+++ b/src/app/workout/workout-el/workout-el.component.html
@@ -1,19 +1,27 @@
 <a
   style="cursor: pointer;"
   routerLinkActive="active"
-  class="list-group-item clearfix">
+  class="clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ workout.name }}</h4>
     <p class="list-group-item-text">{{ workout.kcal }} Kcal</p>
   </div>
   <span class="pull-right">
-       <label for="qty">Duration</label>
-       <input
 
+    <div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <span class="input-group-text">Duration</span>
+  </div>
+  <input class="form-control"
          id="qty" type="number"
          style="width: 50px"
          [(ngModel)] = "qty"
-       >
-           <button class ="btn btn-info" (click)="add()">+</button>
+         class="form-control">
+  <div class="input-group-append">
+    <span class="input-group-text" (click)="add()">+</span>
+  </div>
+</div>
+
+
       </span>
 </a>
