--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
       <img class="user-avatar" src="../../assets/images/logo.png" width="150px"/>
       <h1>Be part of our huge family</h1>
       <div class="row" >
-        <form #f="ngForm" (ngSubmit)="onSubmit(f)" >
+        <form #f="ngForm" (ngSubmit)="onSubmit(f)" [formGroup]="userForm">
           <div class="col-md-5 col">
             <div class="form-content">
               <div class="form-group">
@@ -15,7 +15,11 @@
                        ngModel
                        name="firstName"
                        placeholder="firstName"
+                       formControlName="fname"
                        required>
+              </div>
+              <div *ngIf="userForm.controls['fname'].hasError('required')">
+                <small>FirstName is required  !</small>
               </div>
 
               <div>
@@ -24,8 +28,13 @@
                        id="lastName"
                        name="lastName"
                        ngModel
-                       placeholder="lastName">
+                       placeholder="lastName"
+                       formControlName="lname" required>
               </div>
+
+             <div *ngIf="userForm.controls['lname'].hasError('required')">
+              <small>LastName is required  !</small>
+            </div>
 
               <div>
                 <input type="text"
@@ -33,8 +42,16 @@
                        id="username"
                        name="username"
                        ngModel
-                       placeholder="username">
+                       placeholder="username"
+                       formControlName="uname" required>
               </div>
+
+             <div *ngIf="userForm.controls['uname'].hasError('required')" >
+              <small>Username is required  !</small>
+            </div>
+            <div *ngIf="userForm.controls['uname'].hasError('maxlength')">
+              <small>Username length must not surpass 20 characters !</small>
+            </div>
 
               <div>
                 <input type="email"
@@ -42,21 +59,40 @@
                        id="email"
                        name="email"
                        ngModel
-                       placeholder="email">
+                       placeholder="email"
+                       formControlName="umail" required>
               </div>
+
+              <div *ngIf="userForm.controls['umail'].hasError('required')" >
+                <small>Email is required  !</small>
+              </div>
+
+
               <div>
                 <input  type="number"
                        class="form-control input-underline input-lg"
                        id="age"
                        name="age"
                        ngModel
-                       placeholder="age">
+                       placeholder="age"
+                       formControlName="uage" required>
+              </div>
+              <div *ngIf="userForm.controls['uage'].hasError('required')"  >
+                <small>Age is required  !</small>
+              </div>
+
+              <div *ngIf="userForm.controls['uage'].hasError('min')"  >
+                <small>Age must be >0 !</small>
+              </div>
+
+              <div *ngIf="userForm.controls['uage'].hasError('max')"  >
+                <small>Age must be <100 !</small>
               </div>
 <br><br>
               <div>
+                <Label> Sex</Label>
                 <select id="sex" name="sex"  ngModel class="grey_color" >
-                  <option value="N"  selected> Sex</option>
-                  <option value="M" > M </option>
+                  <option value="M" selected > M </option>
                   <option value="F" > F </option>
                   <!--class="form-control input-underline input-lg"
                   id="sex"
@@ -73,7 +109,7 @@
                        id="password"
                        name="password"
                        ngModel
-                       placeholder="Password">
+                       placeholder="Password" required>
               </div>
 
               <!--<div>-->
@@ -97,7 +133,15 @@
                        id="current_weight"
                        name="current_weight"
                        ngModel
-                       placeholder="current_weight">
+                       placeholder="current_weight"
+                       formControlName="c_weight" required>
+              </div>
+              <div *ngIf="userForm.controls['c_weight'].hasError('required')"  >
+                <small>Current weight is required  !</small>
+              </div>
+
+              <div *ngIf="userForm.controls['c_weight'].hasError('min')"  >
+                <small>Current Weight must be >0 !</small>
               </div>
 
               <div class="form-group">
@@ -106,7 +150,15 @@
                        id="height"
                        name="height"
                        ngModel
-                       placeholder="height">
+                       placeholder="height"
+                       formControlName="uheight" required>
+              </div>
+              <div *ngIf="userForm.controls['uheight'].hasError('required')"  >
+                <small> Height is required  !</small>
+              </div>
+
+              <div *ngIf="userForm.controls['uheight'].hasError('min')"  >
+                <small>Height  Weight must be >0 !</small>
               </div>
 
               <div class="form-group">
@@ -115,14 +167,22 @@
                        id="target_weight"
                        name="target_weight"
                        ngModel
-                       placeholder="target weight">
+                       placeholder="target weight"
+                       formControlName="t_weight" required>
+              </div>
+              <div *ngIf="userForm.controls['t_weight'].hasError('required')" >
+                <small>Target weight is required  !</small>
+              </div>
+
+              <div *ngIf="userForm.controls['t_weight'].hasError('min')"  >
+                <small>Target Weight must be >0 !</small>
               </div>
 
               <div class="form-group">
-
+                <Label> Activity Level</Label>
                   <select  id="activity_lvl" name="activity_lvl"  ngModel class="grey_color" required >
 <!--                    <option value="N"  selected> Activity Level</option>-->
-                    <option value="S"  > Sedentary Person</option>
+                    <option value="S" selected > Sedentary Person</option>
                     <option value="M" > Moderately Active Person </option>
                     <option value="A" > Active Person </option>
                     <!--class="form-control input-underline input-lg"
@@ -165,5 +225,4 @@
       </div>
     </div>
   </div>
-
 
